--- a/src/resources/ui/fxml/GameBoard.fxml
+++ b/src/resources/ui/fxml/GameBoard.fxml
@@ -1,77 +1,83 @@
+<?import com.jfoenix.controls.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.*?>
+<?import ui.controls.ConfirmationDialog?>
+<?import ui.controls.InformationDialog?>
 <?import ui.controls.PlayerTimerPane?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.HBox?>
-<?import com.jfoenix.controls.JFXTextField?>
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.layout.GridPane?>
-<AnchorPane fx:id="__rootPane" xmlns:fx="http://javafx.com/fxml">
-	<StackPane fx:id="gameBoard" AnchorPane.topAnchor="30" AnchorPane.leftAnchor="30">
-		<ImageView fitHeight="774" fitWidth="774">
-			<Image url="image/board.png"/>
-		</ImageView>
-	</StackPane>
+<StackPane fx:id="__rootPane" xmlns:fx="http://javafx.com/fxml">
+	<AnchorPane>
+		<StackPane fx:id="gameBoard" AnchorPane.topAnchor="30" AnchorPane.leftAnchor="30">
+			<ImageView fitHeight="774" fitWidth="774">
+				<Image url="image/board.png"/>
+			</ImageView>
+		</StackPane>
 
-	<AnchorPane fx:id="rootPane" styleClass="page-center-pane" AnchorPane.leftAnchor="844"
-	            AnchorPane.rightAnchor="20" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0">
-		<!-- 30 + 774 + 40 -->
-		<VBox spacing="10"
-		      AnchorPane.topAnchor="10" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
-			<Label text="  Match Summary" styleClass="sublist-header"/>
-			<PlayerTimerPane fx:id="player1Pane" name="Naïve!" score="99" totalTime="123" remainingTime="20">
-				<icon>
-					<Image url="ui/controls/avatar/ha.gif"/>
-				</icon>
-			</PlayerTimerPane>
-			<PlayerTimerPane fx:id="player2Pane" name="果皇·天气晴朗" score="9" totalTime="999" remainingTime="10">
-				<icon>
-					<Image url="ui/controls/avatar/honoka.jpg"/>
-				</icon>
-			</PlayerTimerPane>
-		</VBox>
+		<AnchorPane fx:id="rootPane" styleClass="page-center-pane" AnchorPane.leftAnchor="844"
+		            AnchorPane.rightAnchor="20" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0">
+			<!-- 30 + 774 + 40 -->
+			<VBox spacing="10"
+			      AnchorPane.topAnchor="10" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+				<Label text="  Match Summary" styleClass="sublist-header"/>
+				<PlayerTimerPane fx:id="player1Pane" name="Naïve!" score="99" totalTime="123" remainingTime="20">
+					<icon>
+						<Image url="ui/controls/avatar/ha.gif"/>
+					</icon>
+				</PlayerTimerPane>
+				<PlayerTimerPane fx:id="player2Pane" name="果皇·天气晴朗" score="9" totalTime="999" remainingTime="10">
+					<icon>
+						<Image url="ui/controls/avatar/honoka.jpg"/>
+					</icon>
+				</PlayerTimerPane>
+			</VBox>
 
-		<VBox spacing="10" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
-		      AnchorPane.topAnchor="230" AnchorPane.bottomAnchor="250">
-			<Label text="  Chat" styleClass="sublist-header"/>
-			<StackPane>
-				<padding>
-					<Insets left="15" right="15"/>
-				</padding>
-				<TextArea fx:id="chatDialog" focusTraversable="false" editable="false" wrapText="true"
-				          style="-fx-font-size: 16px" styleClass="os-x-scrollbar"
-				          text="Pretending there's dialog"
-				          minHeight="250" maxHeight="250"/>
-			</StackPane>
-			<HBox spacing="10" alignment="CENTER">
-				<JFXTextField fx:id="chatText" promptText="Chat here" prefWidth="225" style="-fx-font-size: 16px"/>
-				<JFXButton fx:id="sendChatButton" text="SEND" styleClass="button-raised"/>
-			</HBox>
-		</VBox>
+			<VBox spacing="10" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
+			      AnchorPane.topAnchor="230" AnchorPane.bottomAnchor="250">
+				<Label text="  Chat" styleClass="sublist-header"/>
+				<StackPane>
+					<padding>
+						<Insets left="15" right="15"/>
+					</padding>
+					<TextArea fx:id="chatDialog" focusTraversable="false" editable="false" wrapText="true"
+					          style="-fx-font-size: 16px" styleClass="os-x-scrollbar"
+					          text="Pretending there's dialog"
+					          minHeight="250" maxHeight="250"/>
+				</StackPane>
+				<HBox spacing="10" alignment="CENTER">
+					<JFXTextField fx:id="chatText" promptText="Chat here" prefWidth="225" style="-fx-font-size: 16px"/>
+					<JFXButton fx:id="sendChatButton" text="SEND" styleClass="button-raised"/>
+				</HBox>
+			</VBox>
 
-		<VBox spacing="10" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="30">
-			<Label text="  Game Actions" styleClass="sublist-header"/>
-			<GridPane fx:id="buttonsPane" alignment="CENTER" vgap="25" hgap="25" styleClass="game-page-buttons-pane">
-				<JFXButton fx:id="readyButton" text="READY"
-				           GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-				<JFXButton fx:id="undoButton" text="UNDO"
-				           GridPane.rowIndex="0" GridPane.columnIndex="1"/>
-				<JFXButton fx:id="drawButton" text="DRAW"
-				           GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-				<JFXButton fx:id="surrenderButton" text="GIVE UP"
-				           GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-				<JFXButton fx:id="saveLoadButton" text="LOAD"
-				           GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-				<JFXButton fx:id="exitButton" text="EXIT"
-				           GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-			</GridPane>
-		</VBox>
+			<VBox spacing="10" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="30">
+				<Label text="  Game Actions" styleClass="sublist-header"/>
+				<GridPane fx:id="buttonsPane" alignment="CENTER" vgap="25" hgap="25"
+				          styleClass="game-page-buttons-pane">
+					<JFXButton fx:id="readyButton" text="READY"
+					           GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+					<JFXButton fx:id="undoButton" text="UNDO"
+					           GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+					<JFXButton fx:id="drawButton" text="DRAW"
+					           GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+					<JFXButton fx:id="surrenderButton" text="GIVE UP"
+					           GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+					<JFXButton fx:id="saveLoadButton" text="LOAD"
+					           GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+					<JFXButton fx:id="exitButton" text="EXIT"
+					           GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+				</GridPane>
+			</VBox>
+		</AnchorPane>
 	</AnchorPane>
-</AnchorPane>
+
+	<InformationDialog fx:id="infoDialog" heading="Some heading" contents="Some content"/>
+	<ConfirmationDialog fx:id="confirmDialog" acceptButtonText="ACCEPT" declineButtonText="REFUSE"
+	                    heading="Confirm request">
+		<body>
+			<Label fx:id="confirmDialogContents" text="Some request"/>
+		</body>
+	</ConfirmationDialog>
+</StackPane>
