--- a/src/resources/ui/fxml/GameBoard.fxml
+++ b/src/resources/ui/fxml/GameBoard.fxml
@@ -8,6 +8,10 @@
 <?import ui.controls.InformationDialog?>
 <?import ui.controls.PlayerTimerPane?>
 
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.shape.Rectangle?>
+<?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <StackPane fx:id="__rootPane" xmlns:fx="http://javafx.com/fxml">
 	<AnchorPane>
 		<StackPane fx:id="gameBoard" AnchorPane.topAnchor="30" AnchorPane.leftAnchor="30">
@@ -19,23 +23,22 @@
 		<AnchorPane fx:id="rootPane" styleClass="page-center-pane" AnchorPane.leftAnchor="844"
 		            AnchorPane.rightAnchor="20" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0">
 			<!-- 30 + 774 + 40 -->
-			<VBox spacing="10"
-			      AnchorPane.topAnchor="10" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
-				<Label text="  Match Summary" styleClass="sublist-header"/>
-				<PlayerTimerPane fx:id="player1Pane" name="Naïve!" score="99" totalTime="123" remainingTime="20">
-					<icon>
-						<Image url="ui/controls/avatar/ha.gif"/>
-					</icon>
-				</PlayerTimerPane>
-				<PlayerTimerPane fx:id="player2Pane" name="果皇·天气晴朗" score="9" totalTime="999" remainingTime="10">
-					<icon>
-						<Image url="ui/controls/avatar/honoka.jpg"/>
-					</icon>
-				</PlayerTimerPane>
-			</VBox>
+			<StackPane AnchorPane.topAnchor="10" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+				<VBox spacing="10">
+					<Label text="  Match Summary" styleClass="sublist-header"/>
+					<PlayerTimerPane fx:id="player1Pane"
+					                 name="Naïve!" score="99" remainingTime="20" state="BLACK"/>
+					<PlayerTimerPane fx:id="player2Pane"
+					                 name="果皇·天气晴朗" score="9" remainingTime="10" state="WHITE"/>
+				</VBox>
+				<!--<ImageView translateY="22" fitWidth="${rootPane.width - 80}" fitHeight="10">-->
+					<!--<Image url="image/vs.png"/>-->
+				<!--</ImageView>-->
+				<!--<MaterialIconView glyphName="PLAY_ARROW" glyphSize="25" translateX="-160" translateY="-20"/>-->
+			</StackPane>
 
 			<VBox spacing="10" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
-			      AnchorPane.topAnchor="230" AnchorPane.bottomAnchor="250">
+			      AnchorPane.topAnchor="230">
 				<Label text="  Chat" styleClass="sublist-header"/>
 				<StackPane>
 					<padding>
@@ -46,7 +49,7 @@
 					          text="Pretending there's dialog"
 					          minHeight="250" maxHeight="250"/>
 				</StackPane>
-				<HBox spacing="10" alignment="CENTER">
+				<HBox fx:id="chatBox" spacing="10" alignment="CENTER">
 					<JFXTextField fx:id="chatText" promptText="Chat here" prefWidth="225" style="-fx-font-size: 16px"/>
 					<JFXButton fx:id="sendChatButton" text="SEND" styleClass="button-raised"/>
 				</HBox>
@@ -72,6 +75,13 @@
 			</VBox>
 		</AnchorPane>
 	</AnchorPane>
+
+	<Label fx:id="bannerText" visible="false" text="White Wins!"
+	       style="-fx-font-size: 80px; -fx-font-family: 'Bank Gothic Light BT'; -fx-text-fill: BLACK">
+		<effect>
+			<DropShadow color="WHITE" blurType="GAUSSIAN" spread="0.6" radius="20"/>
+		</effect>
+	</Label>
 
 	<InformationDialog fx:id="infoDialog" heading="Some heading" contents="Some content"/>
 	<ConfirmationDialog fx:id="confirmDialog" acceptButtonText="ACCEPT" declineButtonText="REFUSE"
