--- a/src/resources/ui/fxml/GameBoard.fxml
+++ b/src/resources/ui/fxml/GameBoard.fxml
@@ -1,6 +1,7 @@
 <?import com.jfoenix.controls.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
@@ -8,11 +9,7 @@
 <?import ui.controls.InformationDialog?>
 <?import ui.controls.PlayerTimerPane?>
 
-<?import javafx.scene.effect.Glow?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.shape.Rectangle?>
-<?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
-<?import javafx.scene.effect.BoxBlur?>
+<?import javafx.scene.web.WebView?>
 <StackPane fx:id="__rootPane" xmlns:fx="http://javafx.com/fxml">
 	<AnchorPane>
 		<StackPane fx:id="gameBoard" AnchorPane.topAnchor="30" AnchorPane.leftAnchor="30">
@@ -33,7 +30,7 @@
 					                 name="果皇·天气晴朗" score="9" remainingTime="10" state="WHITE"/>
 				</VBox>
 				<!--<ImageView translateY="22" fitWidth="${rootPane.width - 80}" fitHeight="10">-->
-					<!--<Image url="image/vs.png"/>-->
+				<!--<Image url="image/vs.png"/>-->
 				<!--</ImageView>-->
 				<!--<MaterialIconView glyphName="PLAY_ARROW" glyphSize="25" translateX="-160" translateY="-20"/>-->
 			</StackPane>
@@ -43,12 +40,17 @@
 				<Label text="  Chat" styleClass="sublist-header"/>
 				<StackPane>
 					<padding>
-						<Insets left="15" right="15"/>
+						<Insets left="20" right="20"/>
 					</padding>
-					<TextArea fx:id="chatDialog" focusTraversable="false" editable="false" wrapText="true"
-					          style="-fx-font-size: 16px" styleClass="os-x-scrollbar"
-					          text="Pretending there's dialog"
-					          minHeight="250" maxHeight="250"/>
+					<!--<ScrollPane-->
+					<!--style="-fx-border-width: 3px; -fx-border-radius: 3px; -fx-border-color: rgba(0, 0, 0, 0.4)"-->
+					<!--minHeight="250" maxHeight="250">-->
+					<StackPane
+						style="-fx-border-width: 1px; -fx-border-radius: 3px; -fx-border-color: rgba(0, 0, 0, 0.4)">
+						<WebView fx:id="chatDialog" focusTraversable="false" maxWidth="295" minHeight="250"
+						         maxHeight="250"/>
+					</StackPane>
+					<!--</ScrollPane>-->
 				</StackPane>
 				<HBox fx:id="chatBox" spacing="10" alignment="CENTER">
 					<JFXTextField fx:id="chatText" promptText="Chat here" prefWidth="225" style="-fx-font-size: 16px"/>
@@ -91,4 +93,17 @@
 			<Label fx:id="confirmDialogContents" text="Some request"/>
 		</body>
 	</ConfirmationDialog>
+	<JFXDialog fx:id="waitDialog" overlayClose="false">
+		<JFXDialogLayout>
+			<heading>
+				<Label fx:id="waitDialogHeading">Confirmation</Label>
+			</heading>
+			<body>
+				<HBox spacing="20" alignment="CENTER">
+					<JFXSpinner styleClass="blue-spinner" style="-fx-radius: 25px"/>
+					<Label text="Waiting for response..."/>
+				</HBox>
+			</body>
+		</JFXDialogLayout>
+	</JFXDialog>
 </StackPane>
